--- a/certificados.html
+++ b/certificados.html
@@ -40,9 +40,9 @@
               <li class="nav__item">
                 <a href="servicos.html" class="nav__item-link">Serviços</a>
               </li><!-- /.nav-item -->
-              <li class="nav__item">
+              <!-- <li class="nav__item">
                 <a href="exames.html" class="nav__item-link">Exames</a>
-              </li><!-- /.nav-item -->
+              </li>/.nav-item -->
               <li class="nav__item">
                 <a href="certificados.html" class="nav__item-link active">Certificados</a>
               </li><!-- /.nav-item -->
@@ -58,8 +58,8 @@
               <a href="tel:558436165000" class="contato_topo">
                 <i class="fa-solid fa-phone"></i><span>(84) 3616-5000</span>
               </a>
-              <a href="https://wa.me/558436165001" target="_blank" class="contato_topo">
-                <i class="fa-brands fa-whatsapp"></i> <span>(84) 3616-5001</span>
+              <a href="https://wa.me/558436165000" target="_blank" class="contato_topo">
+                <i class="fa-brands fa-whatsapp"></i> <span>(84) 3616-5000</span>
               </a>
             </div>
           </div><!-- /.navbar-collapse -->
@@ -67,6 +67,12 @@
           <div class="botao-resultados d-xl-flex align-items-center position-relative">
             <a href="https://www.pulsesaude.com.br/" target="_blank" class="btn btn__primary btn__rounded ml-20">
               <span>Resultados</span>
+            </a>
+          </div>
+          <div class="botao-resultados d-xl-flex align-items-center position-relative">
+            <a href="https://app.s2medica.com.br/checkout/laboratorios/hemolab-4" target="_blank"
+              class="btn btn__primary btn__rounded ml-20" style="background-color: #00a3e8;">
+              <span>Compre Online</span>
             </a>
           </div>
         </div><!-- /.container -->
@@ -114,7 +120,7 @@
               <!-- Certificado 1 -->
               <div class="member">
                 <div class="member__img">
-                  <img src="assets/images/certificados/PNCQ2.png" alt="certificado img">
+                  <img src="assets/images/certificados/PNCQ3.png" alt="certificado img">
                 </div><!-- /.cert-img -->
                 <div class="member__info">
                   <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial</a></h5>
