--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <li class="nav__item">
               <a href="servicos.html" class="nav__item-link">Serviços</a>
             </li><!-- /.nav-item -->
-            <li class="nav__item">
+            <!-- <li class="nav__item">
               <a href="exames.html" class="nav__item-link">Exames</a>
-            </li><!-- /.nav-item -->
+            </li>/.nav-item -->
             <li class="nav__item">
               <a href="certificados.html" class="nav__item-link">Certificados</a>
             </li><!-- /.nav-item -->
@@ -56,8 +56,8 @@
             <a href="tel:558436165000" class="contato_topo">
               <i class="fa-solid fa-phone"></i><span>(84) 3616-5000</span>
             </a>
-            <a href="https://wa.me/558436165001" target="_blank" class="contato_topo">
-              <i class="fa-brands fa-whatsapp"></i> <span>(84) 3616-5001</span>
+            <a href="https://wa.me/558436165000" target="_blank" class="contato_topo">
+              <i class="fa-brands fa-whatsapp"></i> <span>(84) 3616-5000</span>
             </a>
           </div>
         </div><!-- /.navbar-collapse -->
@@ -65,6 +65,12 @@
         <div class="botao-resultados d-xl-flex align-items-center position-relative">
           <a href="https://www.pulsesaude.com.br/" target="_blank" class="btn btn__primary btn__rounded ml-20">
             <span>Resultados</span>
+          </a>
+        </div>
+        <div id="compra" class="botao-resultados d-xl-flex align-items-center position-relative">
+          <a href="https://app.s2medica.com.br/checkout/laboratorios/hemolab-4" target="_blank"
+            class="btn btn__primary btn__rounded ml-20" style="background-color: #00a3e8;">
+            <span>Compre Online</span>
           </a>
         </div>
       </div><!-- /.container -->
@@ -91,25 +97,6 @@
                   <a href="https://play.google.com/store/apps/details?id=br.com.nd.hemolab.app" target="_blank"
                     class="btn btn__primary btn__rounded mr-30 btn__slider">
                     <span>Acessar agora</span>
-                  </a>
-                </div>
-              </div><!-- /.slide-content -->
-            </div><!-- /.col-xl-7 -->
-          </div><!-- /.row -->
-        </div><!-- /.container -->
-      </div><!-- /.slide-item -->
-      <div class="slide-item align-v-h">
-        <div class="bg-img"><img src="assets/images/sliders/1.jpg" alt="slide img"></div>
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
-              <div class="slide__content">
-                <h2 class="slide__title">Proteja sua família!</h2>
-                <p class="slide__desc"> O Hemolab vacinas possui um espaço completo especializado em vacinação para
-                  todas as fases da vida, da fase infantil até a melhor idade.</p>
-                <div class="d-flex flex-wrap align-items-center">
-                  <a href="servicos.html" class="btn btn__primary btn__rounded mr-30 btn__slider">
-                    <span>Saiba mais</span>
                   </a>
                 </div>
               </div><!-- /.slide-content -->
@@ -211,17 +198,7 @@
       </div><!-- /.row -->
       <div class="row d-flex justify-content-center">
         <!-- Feature item #1 -->
-        <div class="col-sm-6 col-md-6 col-lg-3">
-          <div class="feature-item">
-            <div class="feature__content">
-              <div class="feature__icon">
-                <i class="icon-heart2"></i>
-                <i class="icon-heart2 feature__overlay-icon"></i>
-              </div>
-              <h4 class="feature__title">Vacinas</h4>
-            </div><!-- /.feature__content -->
-          </div><!-- /.feature-item -->
-        </div><!-- /.col-lg-3 -->
+
         <!-- Feature item #2 -->
         <div class="col-sm-6 col-md-6 col-lg-3">
           <div class="feature-item">
@@ -251,7 +228,7 @@
         <div class="col-md-12 col-lg-6 offset-lg-3 text-center">
           <p class="font-weight-bold mb-0">Equipamentos de alta tecnologia, atendimento de excelência e confiança nos
             resultados!
-            <a href="https://wa.me/558436165001" class="color-secondary">
+            <a href="https://wa.me/558436165000" class="color-secondary">
               <span>Entre em contato</span> <i class="icon-arrow-right"></i>
             </a>
           </p>
@@ -270,6 +247,8 @@
           <div class="heading-layout1 heading-light mb-60">
             <h3 class="heading__title">Nossas unidades</h3>
             <p class="heading__desc">Tem sempre um Hemolab perto de você!</p>
+            <p class="mt-20 color-white">OBS: Coletas são realizadas até 1 hora antes do fechamento. <br> (Exceto
+              Petrópolis).</p>
           </div><!-- /.heading -->
         </div><!-- /.col-lg-6 -->
       </div><!-- /.row -->
@@ -277,7 +256,7 @@
         <div class="col-12">
           <div class="carousel-container">
             <div class="slick-carousel carousel-arrows-light carousel-dots-light"
-              data-slick='{"slidesToShow": 3, "slidesToScroll": 2, "autoplay": true, "arrows": true, "dots": true, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 2}}, {"breakpoint": 767, "settings": {"slidesToShow": 1}}, {"breakpoint": 480, "settings": {"slidesToShow": 1}}]}'>
+              data-slick='{"slidesToShow": 3, "slidesToScroll": 3, "autoplay": true, "arrows": true, "dots": true, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 2}}, {"breakpoint": 767, "settings": {"slidesToShow": 1}}, {"breakpoint": 480, "settings": {"slidesToShow": 1}}]}'>
               <!-- unidade-item #1 -->
               <div class="service-item">
                 <div class="service__img">
@@ -291,8 +270,8 @@
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
                     <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
                       6:00h
-                      as
-                      17:00h Sábado das 6:30h as 13:00h</li>
+                      às
+                      17:00h Sábado das 6:30h às 13:00h</li>
                   </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
@@ -311,8 +290,8 @@
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
                     <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
                       6:00h
-                      as
-                      12:00h Sábado das 6:30h as 12:00h</li>
+                      às
+                      16:00h Sábado das 6:30h às 12:00h</li>
                   </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
@@ -330,8 +309,8 @@
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
                     <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
                       6:00h
-                      as
-                      12:00h Sábado das 6:30h as 10:30h</li>
+                      às
+                      12:00h Sábado das 6:30h às 10:30h</li>
                   </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
@@ -348,29 +327,13 @@
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
                     <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
                       6:00h
-                      as
-                      16:00h Sábado das 6:30h as 12:00h</li>
+                      às
+                      16:00h Sábado das 6:30h às 12:00h</li>
                   </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
               <!-- unidade-item #5 -->
-              <div class="service-item">
-                <div class="service__img">
-                  <img src="assets/images/unidades/roberto freire e vacinas.png" alt="unidade img" loading="lazy">
-                </div><!-- /.service__img -->
-                <div class="service__content">
-                  <h4 class="service__title mb-30">Hemolab - Vacinas</h4>
-                  <ul class="fa-ul">
-                    <li><span class="fa-li"><i class="fa-solid fa-location-dot fa-xl"></i></span>Av. Engenheiro Roberto
-                      Freire, 915 - Capim Macio, Natal - RN</li>
-                    <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
-                    <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
-                      7:00h
-                      as
-                      16:00h Sábado das 7:00h as 11:00h</li>
-                  </ul>
-                </div><!-- /.unidade__content -->
-              </div><!-- /.unidade-item -->
+
               <!-- unidade-item #6 -->
               <div class="service-item">
                 <div class="service__img">
@@ -384,8 +347,8 @@
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
                     <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
                       6:00h
-                      as
-                      12:00h Sábado das 6:30h as 10:30h</li>
+                      às
+                      12:00h Sábado das 6:30h às 10:30h</li>
                   </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
@@ -403,8 +366,8 @@
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
                     <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
                       6:00h
-                      as
-                      12:00h Sábado das 6:30h as 10:30h</li>
+                      às
+                      12:00h Sábado das 6:30h às 10:30h</li>
                   </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
@@ -423,8 +386,8 @@
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
                     <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
                       6:00h
-                      as
-                      12:00h Sábado das 6:30h as 10:30h</li>
+                      às
+                      12:00h Sábado das 6:30h às 10:30h</li>
                   </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
@@ -436,15 +399,13 @@
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Potengi</h4>
                   <ul class="fa-ul">
-                    <li><span class="fa-li"><i class="fa-solid fa-location-dot fa-xl"></i></span>Avenida
-                      Itapetinga,
-                      920 -
-                      Potengi</li>
+                    <li><span class="fa-li"><i class="fa-solid fa-location-dot fa-xl"></i></span>Rua
+                      Ilhéus, 2706 - Potengi</li>
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
                     <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
                       6:00h
-                      as
-                      16:00h Sábado das 6:30h as 11:30h</li>
+                      às
+                      16:00h Sábado das 6:30h às 11:30h</li>
                   </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
@@ -461,8 +422,8 @@
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
                     <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
                       6:00h
-                      as
-                      12:00h Sábado das 6:30h as 10:30h</li>
+                      às
+                      12:00h Sábado das 6:30h às 10:30h</li>
                   </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
@@ -479,8 +440,8 @@
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
                     <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
                       6:00h
-                      as
-                      12:00h Sábado das 6:30h as 10:30h</li>
+                      às
+                      12:00h Sábado das 6:30h às 10:30h</li>
                   </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
@@ -497,8 +458,8 @@
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
                     <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
                       6:00h
-                      as
-                      12:00h Sábado das 6:30h as 12:00h</li>
+                      às
+                      12:00h Sábado das 6:30h às 12:00h</li>
                   </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
@@ -515,8 +476,8 @@
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
                     <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
                       6:00h
-                      as
-                      16:00h Sábado das 6:30h as 11:30h</li>
+                      às
+                      16:00h Sábado das 6:30h às 11:30h</li>
                   </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
@@ -533,8 +494,8 @@
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
                     <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
                       6:00h
-                      as
-                      16:00h Sábado das 6:30h as 12:00h</li>
+                      às
+                      16:00h Sábado das 6:30h às 12:00h</li>
                   </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
@@ -552,26 +513,26 @@
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
                     <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
                       6:00h
-                      as
-                      16:00h Sábado das 6:30h as 12:00h</li>
+                      às
+                      16:00h Sábado das 6:30h às 12:00h</li>
                   </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
               <!-- unidade-item #16 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/ceara-mirim.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/parnamirim2.jpg" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
-                  <h4 class="service__title mb-30">Hemolab - Ceará-mirim</h4>
+                  <h4 class="service__title mb-30"> Hemolab - Parnamirim II</h4>
                   <ul class="fa-ul">
-                    <li><span class="fa-li"><i class="fa-solid fa-location-dot fa-xl"></i></span> Av. General João
-                      Varela, 1019 - Centro, Ceará Mirim - RN</li>
+                    <li><span class="fa-li"><i class="fa-solid fa-location-dot fa-xl"></i></span>R. Edgar Dantas, 451 -
+                      Santos Reis, Parnamirim - RN</li>
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
-                    <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
-                      6:00h
-                      as
-                      12:00h Sábado: Fechado
+                    <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das 6:00h às
+                      12:00h
+                      Sábado das 6:30h às 10:30h</li>
+                  </ul>
                 </div><!-- /.unidade__content -->
               </div><!-- /.unidade-item -->
             </div><!-- /.carousel -->
@@ -599,7 +560,7 @@
           <div class="heading text-center mb-40">
             <h3 class="heading__title">Certificados</h3>
             <p class="heading__desc">O laboratório pioneiro do Rio Grande do Norte certificado pelo Sistema Nacional de
-              Acreditação da Sociedade Brasileira de Análises Clínicas.
+              Acreditação da Sociedade Brasileira de Análises Clínicas.
             </p>
           </div><!-- /.heading -->
         </div><!-- /.col-lg-6 -->
@@ -859,7 +820,7 @@
     </div><!-- /.footer-secondary -->
     </footer><!-- /.Footer -->
     <div class="whats">
-      <a class="link-whats" href="https://wa.me/558436165001" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <a class="link-whats" href="https://wa.me/558436165000" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
     <script src=" assets/js/jquery-3.5.1.min.js"></script>
     <script src="assets/js/plugins.js"></script>
